# ---

./: README.md
Loongson_python/: LoongSocket.py  LoongsonSqlite.py  NodeMessage.py  RandomForestModel.py  ServerData.py  handle.py  main.py  modelMain.pkl  modelMessage.pkl  tool.py
Model_py/: test.py  train.py
Node_Freertos/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
Node_Freertos/main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h
Node_Freertos/main/adc/: nodeadc.c  nodeadc.h
Node_Freertos/main/i2c/: nodei2c.c  nodei2c.h
Node_Freertos/main/queue/: nodeQueue.c  nodeQueue.h
Node_Freertos/main/relay/: noderelay.c  noderelay.h
Node_Freertos/main/uart_rs485/: uartRS485.c  uartRS485.h
Wechat/: app.js  app.json  app.wxss  package-lock.json  package.json  project.config.json  project.private.config.json
Wechat/font-awesome/: font-awesome.wxss
Wechat/pages/data_analysis/: index.js  index.json  index.wxml  index.wxss
Wechat/pages/device/: device.js  device.json  device.wxml
Wechat/pages/deviceMessage/: index.js  index.json  index.wxml  index.wxss
Wechat/pages/deviceNode/: index.js  index.wxml  index.wxss
Wechat/pages/index/: index.js  index.wxml  index.wxss
Wechat/utils/: mqtt.min.js  request.js
Wechat_Server/: go.mod  go.sum  main.go  makefile  md5.go  mysql.go
loongson_qt/: Frame.cpp  Frame.h  Frame.ui  LoongsonSqlite.cpp  LoongsonSqlite.h  Loongson_qt.pro  SwitchButton.cpp  SwitchButton.h  dialog.cpp  dialog.ui  main.cpp
